--- a/index.html
+++ b/index.html
@@ -350,16 +350,16 @@
                     </div>
                     <div class="bio-content">
                         <div class="bio-block neon-border name-block">
-                            Александр Петров
+                            #name
                         </div>
                         <div class="bio-block neon-border age-block">
-                            Возраст: 28 лет
+                            #old
                         </div>
                         <div class="bio-block neon-border interests-block">
-                            Увлечения: Минимализм, технология, чтение, йога, фотография
+                        #nigger
                         </div>
                         <div class="bio-block neon-border about-block">
-                            Люблю простоту и элегантность во всем. Верю, что меньше - значит больше.
+                         #you
                         </div>
                     </div>
                 </div>
@@ -376,21 +376,21 @@
                                 <i class="fab fa-instagram"></i>
                             </div>
                             <h3>Instagram</h3>
-                            <a href="#" target="_blank">@minimalist_life</a>
+                            <a href="" target="_blank">хуй тебе а не интсаграм</a>
                         </div>
                         <div class="social-card neon-border">
                             <div class="social-icon">
                                 <i class="fab fa-telegram"></i>
                             </div>
                             <h3>Telegram</h3>
-                            <a href="#" target="_blank">@minimalist_chat</a>
+                            <a href="https://t.me/helsedov_prime" target="_blank">@you_nigger</a>
                         </div>
                         <div class="social-card neon-border">
                             <div class="social-icon">
                                 <i class="fas fa-rss"></i>
                             </div>
                             <h3>Telegram Канал</h3>
-                            <a href="#" target="_blank">Minimalist Thoughts</a>
+                            <a href="https://t.me/homsloder" target="_blank">Minimalist nigger</a>
                         </div>
                     </div>
                 </div>
