--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         }
 
         .social-link i {
-            font-size: 1.3rem;
+            margin-right: 8px;
         }
 
         /* Донаты */
@@ -191,6 +191,44 @@
 
         .donate-btn i {
             margin-right: 8px;
+        }
+
+        /* Информация о донате */
+        .donate-info-container {
+            margin-top: 16px;
+            padding: 16px;
+            background: rgba(0, 255, 255, 0.05);
+            border: var(--border);
+            border-radius: 10px;
+            display: none;
+        }
+
+        .donate-info {
+            font-family: monospace;
+            word-break: break-all;
+            margin: 8px 0;
+            padding: 10px;
+            background: #111;
+            border-radius: 6px;
+            font-size: 1rem;
+        }
+
+        .copy-btn {
+            display: inline-block;
+            padding: 8px 16px;
+            background: var(--accent);
+            color: var(--bg);
+            border: none;
+            border-radius: 6px;
+            cursor: pointer;
+            font-weight: 600;
+            margin-top: 10px;
+            font-size: 0.9rem;
+        }
+
+        .copy-btn:hover {
+            background: #00cccc;
+            transform: translateY(-1px);
         }
 
         /* Чат */
@@ -370,101 +408,6 @@
             cursor: pointer;
         }
 
-        /* Donation Modal */
-        .donate-modal {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.8);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 2000;
-            opacity: 0;
-            visibility: hidden;
-            transition: all 0.4s ease;
-        }
-
-        .donate-modal.active {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .donate-modal-content {
-            background: var(--card-bg);
-            width: 90%;
-            max-width: 400px;
-            border-radius: 16px;
-            border: var(--border);
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-            overflow: hidden;
-            transform: scale(0.9);
-            opacity: 0;
-            transition: all 0.3s ease;
-        }
-
-        .donate-modal.active .donate-modal-content {
-            transform: scale(1);
-            opacity: 1;
-        }
-
-        .donate-header {
-            padding: 20px;
-            text-align: center;
-            border-bottom: var(--border);
-            color: var(--accent);
-            font-size: 1.3rem;
-        }
-
-        .donate-body {
-            padding: 20px;
-            font-size: 1.1rem;
-            color: var(--text);
-        }
-
-        .donate-info {
-            background: rgba(0, 255, 255, 0.05);
-            border: var(--border);
-            padding: 12px 16px;
-            border-radius: 8px;
-            margin-bottom: 16px;
-            font-family: monospace;
-            word-break: break-all;
-            transition: background 0.3s;
-        }
-
-        .copy-btn {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background: var(--accent);
-            color: var(--bg);
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-weight: 600;
-            margin-top: 10px;
-            transition: all 0.3s;
-        }
-
-        .copy-btn:hover {
-            background: #00cccc;
-            transform: translateY(-1px);
-        }
-
-        .donate-close {
-            text-align: center;
-            padding: 10px 0 20px;
-            color: #777;
-            cursor: pointer;
-        }
-
-        .donate-close:hover {
-            color: var(--accent);
-        }
-
         footer {
             text-align: center;
             padding: 20px;
@@ -488,30 +431,30 @@
     <div class="main-container">
         <div class="content-card">
             <div class="card-body">
-                <div class="logo fade-in delay-1">homsloder</div>
+                <div class="logo fade-in delay-1">kerov</div>
 
                 <!-- Страницы -->
                 <div id="bio" class="page active">
                     <div class="profile-icon fade-in delay-2 neon">
                         <i class="fas fa-user"></i>
                     </div>
-                    <div class="bio-item name fade-in delay-3">Алексей</div>
-                    <div class="bio-item fade-in delay-4">28 лет</div>
-                    <div class="bio-item fade-in delay-5">Веб-разработка, AI, дизайн</div>
-                    <div class="bio-item fade-in delay-5">Создаю чистые, умные и красивые сайты.</div>
+                    <div class="bio-item name fade-in delay-3">Мэр(сокращённо)</div>
+                    <div class="bio-item fade-in delay-4">15 лет</div>
+                    <div class="bio-item fade-in delay-4">Темщик</div>
+                    <div class="bio-item fade-in delay-5">Занимаюсь веб разработкой и т.д (вайб) </div>
                 </div>
 
                 <div id="social" class="page">
                     <h3 class="fade-in">Соцсети</h3>
                     <div class="social-grid">
-                        <a href="https://t.me/homsloder" target="_blank" class="social-link fade-in delay-1">
+                        <a href="https://t.me/kerov_gu" target="_blank" class="social-link fade-in delay-1">
                             <i class="fab fa-telegram"></i> Telegram Канал
                         </a>
-                        <a href="https://t.me/helsedov_prime" target="_blank" class="social-link fade-in delay-2">
+                        <a href="https://t.me/kerov_tw" target="_blank" class="social-link fade-in delay-2">
                             <i class="fab fa-telegram"></i> Личный чат
                         </a>
-                        <a href="https://instagram.com/homsloder" target="_blank" class="social-link fade-in delay-3">
-                            <i class="fab fa-instagram"></i> Instagram
+                        <a href="https://instagram.com/kerov_project" target="_blank" class="social-link fade-in delay-3">
+                            <i class="fab fa-instagram"></i> Проект в телеграм
                         </a>
                     </div>
                 </div>
@@ -519,15 +462,38 @@
                 <div id="donate" class="page">
                     <h3 class="fade-in">Поддержать</h3>
                     <div class="donate-grid">
-                        <button class="donate-btn fade-in delay-1" data-donate="donate-1">
-                            <i class="fas fa-heart"></i> Donationalerts
-                        </button>
-                        <button class="donate-btn fade-in delay-2" data-donate="donate-2">
-                            <i class="fab fa-ethereum"></i> Крипта: USDT (TRC20)
-                        </button>
-                        <button class="donate-btn fade-in delay-3" data-donate="donate-3">
-                            <i class="fas fa-coffee"></i> Спонсируй кофе
-                        </button>
+                        <div>
+                            <button class="donate-btn fade-in delay-1" data-donate="donate-1">
+                                <i class="fas fa-heart"></i> Donationalerts
+                            </button>
+                            <div class="donate-info-container" id="donate-info-1">
+                                <p>Переведи на карту:</p>
+                                <div class="donate-info">soon...</div>
+                                <p>Или через сервис:</p>
+                                <div class="donate-info">soon...</div>
+                                <button class="copy-btn" data-copy="2200 1234 5678 9012">Скопировать номер карты</button>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="donate-btn fade-in delay-2" data-donate="donate-2">
+                                <i class="fab fa-ethereum"></i> Крипта: USDT (TRC20)
+                            </button>
+                            <div class="donate-info-container" id="donate-info-2">
+                                <p>Отправь на кошелёк:</p>
+                                <div class="donate-info">soon...</div>
+                                <button class="copy-btn" data-copy="TH1234abcd5678efgh9012ijklmnopqrstuv">Скопировать адрес</button>
+                            </div>
+                        </div>
+                        <div>
+                            <button class="donate-btn fade-in delay-3" data-donate="donate-3">
+                                <i class="fas fa-coffee"></i> Спонсируй кофе
+                            </button>
+                            <div class="donate-info-container" id="donate-info-3">
+                                <p>Номер карты:</p>
+                                <div class="donate-info">soon...</div>
+                                <button class="copy-btn" data-copy="2200 1234 5678 9012">Скопировать</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -577,45 +543,6 @@
                     <i class="fas fa-moon"></i> Светлая тема
                 </li>
             </ul>
-        </div>
-    </div>
-
-    <!-- Donation Modals -->
-    <div class="donate-modal" id="donate-modal-1">
-        <div class="donate-modal-content">
-            <div class="donate-header">Поддержать через Donationalerts</div>
-            <div class="donate-body">
-                <p>Переведи на карту:</p>
-                <div class="donate-info">2200 1234 5678 9012</div>
-                <p>Или через сервис:</p>
-                <div class="donate-info">donationalerts.com/r/homsloder</div>
-                <button class="copy-btn" data-copy="2200 1234 5678 9012">Скопировать номер карты</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
-        </div>
-    </div>
-
-    <div class="donate-modal" id="donate-modal-2">
-        <div class="donate-modal-content">
-            <div class="donate-header">Крипто-донат (USDT TRC20)</div>
-            <div class="donate-body">
-                <p>Отправь на кошелёк:</p>
-                <div class="donate-info">TH1234abcd5678efgh9012ijklmnopqrstuv</div>
-                <button class="copy-btn" data-copy="TH1234abcd5678efgh9012ijklmnopqrstuv">Скопировать адрес</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
-        </div>
-    </div>
-
-    <div class="donate-modal" id="donate-modal-3">
-        <div class="donate-modal-content">
-            <div class="donate-header">Спонсируй кофе</div>
-            <div class="donate-body">
-                <p>Номер карты:</p>
-                <div class="donate-info">2200 1234 5678 9012</div>
-                <button class="copy-btn" data-copy="2200 1234 5678 9012">Скопировать</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
         </div>
     </div>
 
@@ -691,27 +618,29 @@
                 : '<i class="fas fa-sun"></i> Светлая тема';
         });
 
-        // Донат-модальные окна
-        const donateButtons = document.querySelectorAll('[data-donate]');
-        const closeDonates = document.querySelectorAll('.close-donate');
-        const copyButtons = document.querySelectorAll('.copy-btn');
-
-        donateButtons.forEach(btn => {
-            btn.addEventListener('click', () => {
-                const modalId = btn.getAttribute('data-donate');
-                document.getElementById(modalId).classList.add('active');
-            });
-        });
-
-        closeDonates.forEach(btn => {
-            btn.addEventListener('click', () => {
-                btn.closest('.donate-modal').classList.remove('active');
+        // Обработчики кнопок доната
+        document.querySelectorAll('[data-donate]').forEach(btn => {
+            btn.addEventListener('click', function() {
+                const donateId = this.getAttribute('data-donate');
+                const infoContainer = document.getElementById(`donate-info-${donateId.slice(-1)}`);
+                
+                // Скрыть все остальные контейнеры
+                document.querySelectorAll('.donate-info-container').forEach(container => {
+                    container.style.display = 'none';
+                });
+                
+                // Показать нужный контейнер
+                if (infoContainer.style.display === 'block') {
+                    infoContainer.style.display = 'none';
+                } else {
+                    infoContainer.style.display = 'block';
+                }
             });
         });
 
         // Копирование
-        copyButtons.forEach(btn => {
-            btn.addEventListener('click', function () {
+        document.querySelectorAll('.copy-btn').forEach(btn => {
+            btn.addEventListener('click', function() {
                 const text = this.getAttribute('data-copy');
                 navigator.clipboard.writeText(text).then(() => {
                     this.textContent = 'Скопировано!';
@@ -748,7 +677,7 @@
                 const data = await response.json();
                 return data.output?.text || "Ошибка.";
             } catch (error) {
-                return "Не удалось подключиться к ИИ.";
+                return "Пошёл нахуй";
             } finally {
                 typing.style.display = 'none';
             }
@@ -777,4 +706,4 @@
         });
     </script>
 </body>
-    </html>
+</html>
