--- a/index.html
+++ b/index.html
@@ -526,11 +526,11 @@
                 <div id="donate-page" class="page">
                     <h3 class="fade-in">Поддержать</h3>
                     <div class="donate-grid">
-                        <button class="donate-btn fade-in delay-1" data-donate="donate-1">
-                            <i class="fas fa-heart"></i> Donationalerts
+                        <button <a href="https://t.me/kerov_1p" target="_blank" class="donate-btn fade-in delay-1" data-donate="donate-1">
+                            <i class="fas fa-heart"></i> Проект 1
                         </button>
-                        <button class="donate-btn fade-in delay-2" data-donate="donate-2">
-                            <i class="fab fa-ethereum"></i> Крипта: USDT (TRC20)
+                        <button <a href="https://t.me/kerov_2p" target="_blank" class="donate-btn fade-in delay-2" data-donate="donate-2">
+                            <i class="fab fa-ethereum"></i> Проект 2
                         </button>
                         <button class="donate-btn fade-in delay-3" data-donate="donate-3">
                             <i class="fas fa-coffee"></i> Спонсируй кофе
@@ -575,7 +575,7 @@
                     <i class="fas fa-share-alt"></i> Соцсети
                 </li>
                 <li class="menu-item nav-link" data-page="donate-page">
-                    <i class="fas fa-gift"></i> Донаты
+                    <i class="fas fa-gift"></i> Проекты
                 </li>
                 <li class="menu-item nav-link" data-page="chat-page">
                     <i class="fas fa-robot"></i> Чат с ИИ
@@ -586,50 +586,7 @@
             </ul>
         </div>
     </div>
-
-    <!-- Donation Modals -->
-    <div class="donate-modal" id="donate-modal-1">
-        <div class="donate-modal-content">
-            <div class="donate-header">Поддержать через Donationalerts</div>
-            <div class="donate-body">
-                <p>Переведи на карту:</p>
-                <div class="donate-info">soon</div>
-                <p>Или через сервис:</p>
-                <div class="donate-info">soon</div>
-                <button class="copy-btn" data-copy="soon">Скопировать номер карты</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
-        </div>
-    </div>
-
-    <div class="donate-modal" id="donate-modal-2">
-        <div class="donate-modal-content">
-            <div class="donate-header">Крипто-донат (USDT TRC20)</div>
-            <div class="donate-body">
-                <p>Отправь на кошелёк:</p>
-                <div class="donate-info">soon</div>
-                <button class="copy-btn" data-copy="soon">Скопировать адрес</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
-        </div>
-    </div>
-
-    <div class="donate-modal" id="donate-modal-3">
-        <div class="donate-modal-content">
-            <div class="donate-header">Спонсируй кофе</div>
-            <div class="donate-body">
-                <p>Номер карты:</p>
-                <div class="donate-info">soon</div>
-                <button class="copy-btn" data-copy="soon">Скопировать</button>
-            </div>
-            <div class="donate-close close-donate">Закрыть</div>
-        </div>
-    </div>
-
-    <footer class="fade-in delay-1">
-        &copy; 2025 <a href="https://t.me/kerov_tw" style="color: var(--accent); text-decoration: none;">@homsloder</a>
-    </footer>
-
+    
     <script>
         // Анимация появления при загрузке
         document.addEventListener('DOMContentLoaded', () => {
