--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
                 <h3>Links</h3>
                 <div class="status-item"><!--lspqd-->
                     <span>Tg:</span>
-                    <span><a href="t.me/lspqd">lspqd</a> <a href="t.me/dpwoo">lspqd</a></span>
+                    <span><a href="https://t.me/lspqd">lspqd</a> <a href="t.me/dpwoo">lspqd</a></span>
                 </div><!--lspqd-->
                 <div class="status-item">
                     <span>Reviews:</span>
-                    <span><a href="t.me/rwlspqd">reviews</a> or <a  href="#reviews">in site</a></span>
+                    <span><a href="https://t.me/rwlspqd">reviews</a> or <a  href="#reviews">in site</a></span>
                 </div><!--lspqd-->
                 <div class="status-item">
                     <span>Prices:</span>
-                    <span><a href="t.me/prlspqd">prices</a></span><!--lspqd-->
+                    <span><a href="https://t.me/prlspqd">prices</a></span><!--lspqd-->
                 </div>
             </div>
         </div>
